--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <a href="#" class="logo">🛠️ Tools Pack</a>
+            <a href="https://github.com/Vivek-Dhobale" class="logo">🛠️ Tools Pack</a>
         
             <div class="search-container">
                 <span class="search-icon">🔍</span>
