--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,7 @@
         </div>
 
         <footer class="foot">
+            <a href="https://linkedin.com/in/vivek-dhobale-vr"/>
             <p>Tools Pack © 2025 - All rights reserved</p>
             <p>Developed by Vivek Dhobale</p>
         </footer>
