--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             color: #D1D5DB;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
+            text-decoration: none:
         }
         
         .search-container {
