--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <a href="https://github.com/Vivek-Dhobale" class="logo">🛠️ Tools Pack</a>
+            <a href="#" class="logo">🛠️ Tools Pack</a>
         
             <div class="search-container">
                 <span class="search-icon">🔍</span>
@@ -726,7 +726,7 @@
             <div class="command-hint">
                 Press <span class="kbd">Ctrl</span> + <span class="kbd">K</span> for quick access
             </div>
-            <div class="dev">Developed by Vivek Dhobale</div>
+            <div class="dev"><a href="https://github.com/Vivek-Dhobale">Developed by Vivek Dhobale</a></div>
         </div>
     </header>
 
@@ -1166,9 +1166,10 @@
         </div>
 
         <footer class="foot">
-            <a href="https://linkedin.com/in/vivek-dhobale-vr"/>
+            <a href="https://linkedin.com/in/vivek-dhobale-vr">
             <p>Tools Pack © 2025 - All rights reserved</p>
             <p>Developed by Vivek Dhobale</p>
+            </a>
         </footer>
     </main>
 
