--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             pointer-events: none;
         }
 
+        .aa{
+            text-decoration: none;
+        }
+
         .particle {
             position: absolute;
             width: 2px;
@@ -726,7 +730,7 @@
             <div class="command-hint">
                 Press <span class="kbd">Ctrl</span> + <span class="kbd">K</span> for quick access
             </div>
-            <div class="dev"><a href="https://github.com/Vivek-Dhobale">Developed by Vivek Dhobale</a></div>
+            <a href="https://github.com/Vivek-Dhobale class="dev">🔍Developed by Vivek Dhobale</a>
         </div>
     </header>
 
@@ -1166,10 +1170,9 @@
         </div>
 
         <footer class="foot">
-            <a href="https://linkedin.com/in/vivek-dhobale-vr">
-            <p>Tools Pack © 2025 - All rights reserved</p>
+            
+            <a href="https://linkedin.com/in/vivek-dhobale-vr" class="aa">Tools Pack © 2025 - All rights reserved</a>
             <p>Developed by Vivek Dhobale</p>
-            </a>
         </footer>
     </main>
 
