--- a/index.html
+++ b/index.html
@@ -730,7 +730,9 @@
             <div class="command-hint">
                 Press <span class="kbd">Ctrl</span> + <span class="kbd">K</span> for quick access
             </div>
-            <a href="https://github.com/Vivek-Dhobale class="dev">🔍Developed by Vivek Dhobale</a>
+            <div class="dev">
+                🔍 Developed by Vivek Dhobale
+            </div>
         </div>
     </header>
 
