--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         .aa{
             text-decoration: none;
+            color:  #FFFFFF;
         }
 
         .particle {
@@ -731,7 +732,9 @@
                 Press <span class="kbd">Ctrl</span> + <span class="kbd">K</span> for quick access
             </div>
             <div class="dev">
-                🔍 Developed by Vivek Dhobale
+                <a href="https://github.com/Vivek-Dhobale" class="aa">
+                    🔍 Developed by Vivek Dhobale
+                </a>
             </div>
         </div>
     </header>
