--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         .aa{
             text-decoration: none;
-            color:  #FFFFFF;
+            color:  #D1D5DB;
         }
 
         .particle {
