--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
             </div>
             
             <!-- Profile image on the right -->
-            <img src="AI-Gen-tools-pack/1757073573376~3.jpg" alt="Profile" id="profileImage" class="profile-image" title="Welcome!" />
+            <img src="./1757073573376~3.jpg" alt="Profile" id="profileImage" class="profile-image" />
         </div>
     </header>
 
@@ -3535,5 +3535,6 @@ HSL: hsl(${hsl[0]}, ${hsl[1]}%, ${hsl[2]}%)`;
     </script>
 </body>
 </html>
+
 
 
