--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             left: 1rem;
             top: 50%;
             transform: translateY(-50%);
+            color: #60A5FA;
             font-size: 1.1rem;
         }
 
@@ -3505,6 +3506,7 @@ HSL: hsl(${hsl[0]}, ${hsl[1]}%, ${hsl[2]}%)`;
     </script>
 </body>
 </html>
+
 
 
 
