--- a/index.html
+++ b/index.html
@@ -859,17 +859,7 @@
 </head>
 <body>
     <!-- Animated background particles -->
-    <div class="bg-particles">
-        <div class="particle" style="left: 10%; animation-delay: 0s;"></div>
-        <div class="particle" style="left: 20%; animation-delay: 2s;"></div>
-        <div class="particle" style="left: 30%; animation-delay: 4s;"></div>
-        <div class="particle" style="left: 40%; animation-delay: 6s;"></div>
-        <div class="particle" style="left: 50%; animation-delay: 8s;"></div>
-        <div class="particle" style="left: 60%; animation-delay: 10s;"></div>
-        <div class="particle" style="left: 70%; animation-delay: 12s;"></div>
-        <div class="particle" style="left: 80%; animation-delay: 14s;"></div>
-        <div class="particle" style="left: 90%; animation-delay: 16s;"></div>
-    </div>
+    <div class="bg-particles" id="particles"></div>
 
     <!-- Header -->
     <header class="header">
@@ -3506,6 +3496,7 @@ HSL: hsl(${hsl[0]}, ${hsl[1]}%, ${hsl[2]}%)`;
     </script>
 </body>
 </html>
+
 
 
 
