--- a/index.html
+++ b/index.html
@@ -3523,10 +3523,14 @@ HSL: hsl(${hsl[0]}, ${hsl[1]}%, ${hsl[2]}%)`;
                 });
             }, 2000);
         });
+            // Initialize the page
+        window.addEventListener('load', function() {
+            createParticles();
 
     </script>
 </body>
 </html>
+
 
 
 
